# rozsdhabot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose-build.yaml  docker-compose.yaml  help.txt
src/: config.rs  fetcher.rs  hardverapro_parser.rs  main.rs  models.rs  monitor.rs  notifier.rs
src/integrations/: discord.rs  message_handler.rs  mod.rs  telegram.rs  terminal.rs
src/integrations/commands/: mod.rs
src/integrations/discord/: mod.rs
src/integrations/discord/commands/: add.rs
src/models/: listing.rs  mod.rs  subscription.rs
src/parsers/: hardverapro_parser.rs  mod.rs
src/storage/: dummy_persistence.rs  file_persistence.rs  mod.rs  runtime_store.rs  subscription_store.rs
tests/: 71_dated_listings.html
