[package]
name = "rozsdhabot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.42"
dotenv = "0.15.0"
fake_user_agent = "0.2.3"
log = "0.4.29"
reqwest = { version = "0.12.24", features = ["blocking"] }
scraper = "0.25.0"
teloxide = "0.17.0"
tokio = { version = "1.48.0", features = ["full"] }
