[package]
name = "rozsdhabot"
description = "A bot that scrapes listings from HardverApró and notifies you via an integration."
version = "0.1.1"
edition = "2024"

[dependencies]
tracing = "0.1.44"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
fake_user_agent = "0.2.3"
reqwest = { version = "0.12.26", features = ["blocking"] }
scraper = "0.25.0"
teloxide = "0.17.0"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
serde_json = { version = "1.0.145" }
serde = { version = "1.0.228", features = ["derive"] }
serenity = "0.12.5"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
url = "2.5.7"
